/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";

message CFE_TIME_ToneSignalCmd_t_pb
{
	repeated uint32 CmdHeader = 1;
}


message CFE_TIME_SysTime_t_pb
{
	required uint32 Seconds = 1;
	required uint32 Subseconds = 2;
}


message CFE_TIME_DiagPacket_t_pb
{
	repeated uint32 TlmHeader = 1;
	required CFE_TIME_DiagPacket_Payload_t_pb Payload = 2;
}


message CFE_TIME_DiagPacket_Payload_t_pb
{
	required int32 ClockSignal = 1;
	required int32 ClockFlyState = 2;
	required uint32 ToneSignalCount = 3;
	required uint32 ToneMatchErrors = 4;
	required uint32 VirtualMET = 5;
	required int32 OneTimeDirection = 6;
	required CFE_TIME_SysTime_t_pb CurrentTAI = 7;
	required int32 DelayDirection = 8;
	required CFE_TIME_SysTime_t_pb OneTimeAdjust = 9;
	required CFE_TIME_SysTime_t_pb OneHzAdjust = 10;
	required int32 ServerFlyState = 11;
	required CFE_TIME_SysTime_t_pb AtToneSTCF = 12;
	required CFE_TIME_SysTime_t_pb CurrentUTC = 13;
	required uint32 ToneMatchCount = 14;
	required int32 Forced2Fly = 15;
	required uint32 ToneOverLimit = 16;
	required uint32 ToneTaskCount = 17;
	required uint32 DataStoreStatus = 18;
	required CFE_TIME_SysTime_t_pb AtToneDelay = 19;
	required int32 OneHzDirection = 20;
	required uint32 MinElapsed = 21;
	required CFE_TIME_SysTime_t_pb MaxLocalClock = 22;
	required CFE_TIME_SysTime_t_pb ToneDataLatch = 23;
	required CFE_TIME_SysTime_t_pb CurrentMET = 24;
	required int32 AtToneLeaps = 25;
	required int32 ClockSetState = 26;
	required uint32 VersionCount = 27;
	required CFE_TIME_SysTime_t_pb AtToneLatch = 28;
	required int32 ClockSource = 29;
	required CFE_TIME_SysTime_t_pb CurrentLatch = 30;
	required uint32 ToneIntCount = 31;
	required int32 ClockStateAPI = 32;
	required uint32 ToneUnderLimit = 33;
	required uint32 ToneIntErrors = 34;
	required CFE_TIME_SysTime_t_pb ToneSignalLatch = 35;
	required uint32 ToneDataCount = 36;
	required uint32 MaxElapsed = 37;
	required uint32 LocalIntCount = 38;
	required uint32 ClockStateFlags = 39;
	required uint32 LocalTaskCount = 40;
	required CFE_TIME_SysTime_t_pb TimeSinceTone = 41;
	required CFE_TIME_SysTime_t_pb AtToneMET = 42;
}


message uint8
{
	repeated uint32 CmdHeader = 1;
}


message CFE_TIME_HkPacket_t_pb
{
	repeated uint32 TlmHeader = 1;
	required CFE_TIME_HkPacket_Payload_t_pb Payload = 2;
}


message CFE_TIME_HkPacket_Payload_t_pb
{
	required uint32 SubsecsSTCF = 1;
	required int32 LeapSeconds = 2;
	required uint32 SecondsMET = 3;
	required uint32 Seconds1HzAdj = 4;
	required uint32 ClockStateFlags = 5;
	required uint32 Subsecs1HzAdj = 6;
	required int32 ClockStateAPI = 7;
	required uint32 ErrCounter = 8;
	required uint32 CmdCounter = 9;
	required uint32 SecondsSTCF = 10;
	required uint32 SubsecsMET = 11;
}


message CFE_TIME_SynchCallbackRegEntry_t_pb
{
	required uint32 App = 1;
	required uint32 Ptr = 2;
}


message CFE_TIME_ToneDataCmd_t_pb
{
	required CFE_TIME_ToneDataCmd_Payload_t_pb Payload = 1;
	repeated uint32 CmdHeader = 2;
}


message CFE_TIME_ToneDataCmd_Payload_t_pb
{
	required CFE_TIME_SysTime_t_pb AtToneSTCF = 1;
	required int32 AtToneState = 2;
	required CFE_TIME_SysTime_t_pb AtToneMET = 3;
	required int32 AtToneLeaps = 4;
}

message CFE_TIME_TaskData_t_pb
{

	required int32 ClockSignal = 1;
	required int32 ClockFlyState = 2;
	required uint32 ToneSignalCount = 3;
	required uint32 ExternalCount = 4;
	required int32 PendingState = 5;
	required uint32 ToneMatchErrors = 6;
	required uint32 VirtualMET = 7;
	required int32 OneTimeDirection = 8;
	required uint32 ErrCounter = 9;
	required int32 DelayDirection = 10;
	required CFE_TIME_SysTime_t_pb OneTimeAdjust = 11;
	required CFE_TIME_SysTime_t_pb OneHzAdjust = 12;
	required uint8 Local1HzCmd = 13;
	required int32 ServerFlyState = 14;
	required bool AutoStartFly = 15;
	required CFE_TIME_SysTime_t_pb PendingMET = 16;
	required bool IsToneGood = 17;
	required uint32 ToneMatchCount = 18;
	required uint32 ToneTaskCount = 19;
	required bool Forced2Fly = 20;
	required uint32 ToneOverLimit = 21;
	required CFE_TIME_SysTime_t_pb PendingSTCF = 22;
	required uint32 PipeDepth = 23;
	required uint32 ToneSemaphore = 24;
	required bool Spare = 25;
	required string PipeName = 26;
	required uint32 DataStoreStatus = 27;
	required CFE_TIME_SysTime_t_pb AtToneDelay = 28;
	required CFE_TIME_DiagPacket_t_pb DiagPacket = 29;
	required CFE_TIME_SysTime_t_pb AtToneMET = 30;
	required CFE_TIME_HkPacket_t_pb HkPacket = 31;
	required CFE_TIME_ToneSignalCmd_t_pb ToneSignalCmd = 32;
	required CFE_TIME_SysTime_t_pb MaxLocalClock = 33;
	required CFE_TIME_ToneDataCmd_t_pb ToneDataCmd = 34;
	required uint32 InternalCount = 35;
	required int32 AtToneLeaps = 36;
	required int32 ClockSetState = 37;
	required uint32 VersionCount = 38;
	required uint32 CmdCounter = 39;
	required CFE_TIME_SysTime_t_pb AtToneLatch = 40;
	required uint32 MsgPtr = 41;
	required int32 ClockSource = 42;
	repeated CFE_TIME_SynchCallbackRegEntry_t_pb SynchCallback = 43;
	required uint32 ToneIntCount = 44;
	required int32 PendingLeaps = 45;
	required uint32 LocalSemaphore = 46;
	required uint32 ToneUnderLimit = 47;
	required uint32 ToneIntErrors = 48;
	required CFE_TIME_SysTime_t_pb ToneSignalLatch = 49;
	required CFE_TIME_SysTime_t_pb ToneDataLatch = 50;
	required uint32 ToneDataCount = 51;
	required CFE_TIME_SysTime_t_pb MaxDelta = 52;
	required uint8 FakeToneCmd = 53;
	required int32 OneHzDirection = 54;
	required uint32 LocalIntCount = 55;
	required CFE_TIME_SysTime_t_pb AtToneSTCF = 56;
	required uint32 LocalTaskID = 57;
	required uint32 MaxElapsed = 58;
	required string CmdPipe = 59;
	required uint32 LocalTaskCount = 60;
	required uint32 ToneTaskID = 61;
	required uint32 MinElapsed = 62;
}