/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";
message CFE_EVS_AppTlmData_t_pb
{

	required uint32 Padding = 1;
	required uint32 AppMessageSentCounter = 2;
	required uint32 AppEnableStatus = 3;
	required uint32 AppID = 4;
}